--- a/application.properties
+++ b/application.properties
@@ -1,24 +1,24 @@
-spring.application.name= doctor-service
+#spring.application.name= doctor-service
 # Database configuration
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=postgres
 spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=update
-spring.profiles.active=git
+#spring.profiles.active=git
 ## Hibernate Properties
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 
 #Zipkin
-spring.zipkin.baseUrl=http://localhost:9411
-spring.sleuth.enabled=true
-management.tracing.sampling.probability=1.0
+#/spring.zipkin.baseUrl=http://localhost:9411
+#spring.sleuth.enabled=true
+#management.tracing.sampling.probability=1.0
 
 #logging
-logging.level.root=WARN
-logging.level.org.springframework.web=ERROR
-logging.level.com.boot=DEBUG
+#logging.level.root=WARN
+#logging.level.org.springframework.web=ERROR
+#logging.level.com.boot=DEBUG
  
-logging.pattern.file= "%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n"
-logging.file.name=doctorcontroller.log
+#logging.pattern.file= "%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n"
+#logging.file.name=doctorcontroller.log
  
