--- a/application.properties
+++ b/application.properties
@@ -10,7 +10,7 @@ spring.profiles.active=git
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 
 #Zipkin
-/spring.zipkin.baseUrl=http://localhost:9411
+spring.zipkin.baseUrl=http://localhost:9411
 spring.sleuth.enabled=true
 management.tracing.sampling.probability=1.0
 
